# pytest-result-sender

./: pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yaml  publish-tos-pypi.yaml
src/pytest_result_sender/: plugin.py
tests/: test_ini.py
