[project]
name = "pytest-result-sender-fanrenbufan"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "fanrenhl", email = "fanrenhl@163.com"},
]
dependencies = ["pytest>=8.4.2", "requests>=2.32.5"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"  # 指定插件入口点

[tool.pdm.build]
package-dir = 'src'  # 源码放在src目录

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pdm-backend>=2.4.7",
    "black>=25.11.0",
    "isort>=6.1.0",
    "flake8>=7.3.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
     \.git
    | \.hg
    | \.tox
    | .venv
    | buck-out
    | build
    | dist
)/
'''

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
] }

test = "pytest"